Alpha 1. All functionality. TODO - fix angular parts.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -12,7 +12,9 @@ application.secret="change-me"
 
 # The application languages
 # ~~~~~
-application.langs="en"
+application.langs="ru"
+
+play.i18n.langs = [ "en", "en-US", "ru-RU" ]
 
 # Global object class
 # ~~~~~
@@ -40,6 +42,27 @@ application.langs="en"
 # db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
 # db.default.password=""
+
+
+
+#slick.dbs.default.driver="slick.driver.SQLiteDriver$"
+#slick.dbs.default.db.driver="org.sqlite.JDBC"
+#slick.dbs.default.db.url="jdbc:sqlite:/home/denis/SiteParsing/Site/test_db.db"
+
+slick.dbs.default.driver = "slick.driver.PostgresDriver$"
+slick.dbs.default.db.driver = "org.postgresql.Driver"
+slick.dbs.default.db.url = "jdbc:postgresql://localhost:5432/test2"
+slick.dbs.default.db.user = "test_user2"
+slick.dbs.default.db.password = "qwerty"
+
+
+#slick.dbs.default.driver = "slick.driver.PostgresDriver$"
+#slick.dbs.default.db.driver = "org.postgresql.Driver"
+#slick.dbs.default.db.url = "jdbc:postgresql://ec2-54-235-183-5.compute-1.amazonaws.com:5432/dag38l6fl0dhm3"
+#slick.dbs.default.db.user = "tvswkwnkecdagv"
+#slick.dbs.default.db.password = "T8oKq0rfttcrf5LV5BZd_TWZVv"
+
+
 
 #db.default.driver=org.postgresql.Driver
 #db.default.url=${?DATABASE_URL}
